--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="#" class="instagram-logout">Remover conta</a>
             </div>
             <div class="group">
-                <p class="not-account">Não é sprucegabriela?</p>
+                <p class="not-account">Não é jocimarcosta?</p>
                 <p class="not-account">
                     <span class="link-blue">Alternar contas</span>
                     ou
